<resources>
    <string name="app_name">SchoolApp</string>
    <string name="app_title">Timetable</string>
<!--    ALLINONE 학교 생활의 모든 것 -->
    <string name="app_subtitle">For your wise school school life</string>
    <string name="home">홈</string>
    <string name="timetable">시간표</string>
    <string name="schedule">일정</string>
    <string name="bite_calculator">바이트 계산기</string>
    <string name="string_length">글자수</string>
    <string name="bite_length">바이트</string>
    <string name="subject_name">과목 이름</string>
    <string name="teacher_name">선생님 성함</string>
    <string name="setting">설정</string>
    <string name="select">선택</string>
    <string name="timetable_setting">시간표 설정하기</string>
    <string name="setting_manage_subject">과목 관리</string>
    <string name="setting_change_subject">시간표 수정</string>
    <string name="setting_set_exam">시험 설정</string>
    <string name="setting_set_exam_with_subject">%s 시험 설정</string>
    <string name="setting_set_exam_timetable">시험 시간표 설정</string>
    <string name="setting_generate_subject">과목 추가하기</string>
    <string name="setting_edit_subject">과목 수정하기</string>
    <string name="generate_subject">과목 추가하기</string>
    <string name="delete_subject">과목 삭제하기</string>
    <string name="delete_subject_with_count">과목 삭제하기(%d개)</string>
    <string name="exam_info_with_subject">%s 시험 정보</string>
    <string name="gakgwan_with_count">객관식 %d개</string>
    <string name="sursul_with_count">서술형 %d개</string>
    <string name="setting_add_schedule">일정 추가하기</string>
    <string name="setting_modifying_schedule">일정 수정하기</string>
    <string name="title">제목</string>
    <string name="details">세부사항</string>
    <string name="sort_type_alam">알림 시간 순서</string>
    <string name="sort_type_generated">생성 시각 순서</string>
    <string name="sort_type_title">제목 내림차순</string>

    <string name="detach_exam">시험 정보 제거하기</string>
    <string name="attach_exam">과목 정보 설정하기</string>

    <string name="word_length_with_count">%d자</string>
    <string name="type_text_here">여기에 텍스트를 입력하세요</string>

    <string-array name="weekday_names">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
    </string-array>

    <string-array name="photo_types">
        <item>수행평가</item>
        <item>시험</item>
    </string-array>

    <string name="request_subject_name">과목 이름을 작성하세요.</string>
    <string name="request_teacher_name">선생님 성함을 작성하세요.</string>
    <string name="request_right_drag">시간표 안에 과목을 드래그 해주세요.</string>
    <string name="request_input_day_or_displayname">날짜 혹은 표시 이름을 입력해주세요.</string>
    <string name="request_photo_type">사진 종류를 선택하세요.</string>
    <string name="request_long_click_to_delete_schedule">길게 눌러 일정을 삭제하세요</string>
    <string name="request_input_subject_name">일정 이름을 입력해주세요.</string>

    <string name="say_already_existing_subject">이미 존재하는 과목 이름입니다.</string>
    <string name="say_generated_subject_with_name">\'%s\' 과목을 생성했습니다.</string>
    <string name="say_edited_subject_with_name">\'%s\' 과목을 수정했습니다.</string>
    <string name="say_deleted_subjects_with_count">과목 %d개를 삭제하였습니다.</string>
    <string name="say_saved_subjects_with_weekday">%s요일의 시간표를 설정했습니다.</string>
    <string name="say_initialized_at_weekday">초기화했습니다.</string>
    <string name="say_added_exam">시험 일정이 추가되었습니다.</string>
    <string name="say_already_existing_exam">이미 존재하는 일정입니다.</string>
    <string name="say_no_pictures">저장된 사진이 없습니다.</string>
    <string name="say_no_examInfo">해당 과목은 시험 정보가 없습니다.</string>
    <string name="say_deleted_schedule">일정을 삭제했습니다.</string>
    <string name="say_added_schedule">일정을 추가했습니다.</string>
    <string name="say_modified_schedule">일정을 수정했습니다.</string>

    <string name="ask_really_delete_subject">체크한 모든 과목을 삭제하시겠습니까?</string>
    <string name="ask_save_at_weekday">해당 과목들을 %s요일에 설정하시겠습니까?</string>
    <string name="ask_really_init_day_timetable">해당 요일 시간표를 초기화하시겠습니까?</string>
    <string name="ask_really_init_exam_timetable">해당 시험 시간표를 초기화하시겠습니까?</string>
    <string name="ask_leave_or_save">저장하지 않은 설정이 있습니다. 저장하시겠습니까?</string>
    <string name="ask_really_leave_without_save">설정을 저장하지 않았습니다. 그래도 나가시겠습니까?</string>
    <string name="ask_save_current_exam">현재 시험 일정을 저장하시겠습니까?</string>
    <string name="ask_really_delete_exam">현재 시험 일정을 삭제하시겠습니까?</string>
    <string name="ask_really_delete_schedule">일정을 삭제하시겠습니까?</string>
    <string name="ask_really_cancel_adding_schedule">일정 추가를 삭제하시겠습니까?</string>
    <string name="ask_really_cancel_modifying_schedule">일정 수정을 취소하시겠습니까?</string>

    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="init">초기화</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="sort">정렬</string>
    <string name="modify">수정</string>
    <string name="save_then_leave">저장하고 나가기</string>

</resources>