<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/body_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            style="@style/BackButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TimetableSettingTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_c4_b2green"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/subject_name"
            android:textColor="@color/green"
            android:textFontWeight="400"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/subject_name"
            style="@style/InputText"
            android:hint="@string/request_subject_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_c4_b2green"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name"
            android:textColor="@color/green"

            android:textFontWeight="400"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/teacher_name"
            style="@style/InputText"
            android:hint="@string/request_teacher_name"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_subject_button"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:textFontWeight="400"
        android:textSize="14dp"
        android:textColor="@color/green"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_white_c4_b1green"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout4"/>


</androidx.constraintlayout.widget.ConstraintLayout>